--- a/sveco/translations/messages.sv.xlf
+++ b/sveco/translations/messages.sv.xlf
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-    <file source-language="en" datatype="plaintext" original="file.ext">
+    <file source-language="sv" datatype="plaintext" original="file.ext">
         <body>
             <trans-unit id="Testing">
                 <source>Testing</source>
-                <target>Test</target>
+                <target>Testar</target>
             </trans-unit>
         </body>
     </file>
